# uopenai

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/uopenai/: __init__.py  core.py
tests/: __init__.py
