[project]
name = "uopenai"
version = "0.1.0"
description = "Minimalistic library to call OpenAI API, with httpx and type-hinting"
authors = [
    {name = "Grigory Bakunov", email = "bobuk@rubedo.cloud"},
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Unlicense"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "mypy>=1.8.0",
]
