[project]
name = "uopenai"
version = "0.1.3"
description = "Minimalistic library to call OpenAI API, with httpx and type-hinting"
authors = [{ name = "Grigory Bakunov", email = "bobuk@rubedo.cloud" }]
dependencies = ["httpx>=0.19.0", "pydantic>=2.0.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Unlicense" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "mypy>=1.8.0"]
